--- a/app/about.html
+++ b/app/about.html
@@ -32,7 +32,7 @@
 
                 <!-- menu -->
                 <nav class="menu">
-                    <a href="#" class="menu__item">about</a>
+                    <a href="#" class="menu__item active">about</a>
                     <a href="#" class="menu__item">Services</a>
                     <a href="#" class="menu__item">Rates</a>
                     <a href="#" class="menu__item">Order</a>
@@ -76,159 +76,13 @@
             </div>
             <!-- /menu-mobile-btn -->
 
+            <div class="header__promo">
+                <img src="img/bg-inner-head.jpg" alt="img"/>
+            </div>
+
         </div>
         <!-- /site__header -->
 
-        <!-- hero -->
-        <div class="hero">
-
-            <!-- hero__person -->
-            <div class="hero__person">
-                <img src="img/bg-index-head.jpg" alt="img"/>
-
-                <!-- hero__person-info -->
-                <div class="hero__person-info">
-
-                    <h3>Tsour Lee Adato</h3>
-                    <span class="hero__person-post">CEO</span>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt voluptatem.</p>
-
-                </div>
-                <!-- /hero__person-info -->
-
-            </div>
-            <!-- /hero__person -->
-
-            <!-- hero__content -->
-            <div class="hero__content">
-                <p>Welcome to <strong>Pro Photo Studio.</strong> We have been involved in Product photography for many years.  Our images have been featured on <strong>Adidas', HSN, Macys, Dick's Sporting goods, Costco, Target, Phillips, Nordstrom</strong> and many more websites, in magazines, and more. Our Product Photography experience ranges from E-commerce to Life style Photography. We Specialize  in all commercial photography, including electronics, cosmetics, apparel as well as other fashion accessories.  We are also specialized in <strong>Amazon , eBay</strong> and <strong>Shopify</strong> photography.</p>
-            </div>
-            <!-- /hero__content -->
-
-        </div>
-        <!-- /hero -->
-
-        <!-- partners -->
-        <div class="partners">
-
-            <div class="partners__swiper-prev"></div>
-
-            <div class="partners__swiper swiper-container">
-
-                <div class="swiper-wrapper">
-
-                    <div class="partners__slide swiper-slide">
-                        <img src="pic/img-001.png" alt="img"/>
-                    </div>
-
-                    <div class="partners__slide swiper-slide">
-                        <img src="pic/img-002.png" alt="img"/>
-                    </div>
-
-                    <div class="partners__slide swiper-slide">
-                        <img src="pic/img-003.png" alt="img"/>
-                    </div>
-
-                    <div class="partners__slide swiper-slide">
-                        <img src="pic/img-004.png" alt="img"/>
-                    </div>
-
-                    <div class="partners__slide swiper-slide">
-                        <img src="pic/img-005.png" alt="img"/>
-                    </div>
-
-                    <div class="partners__slide swiper-slide">
-                        <img src="pic/img-006.png" alt="img"/>
-                    </div>
-
-                    <div class="partners__slide swiper-slide">
-                        <img src="pic/img-001.png" alt="img"/>
-                    </div>
-
-                    <div class="partners__slide swiper-slide">
-                        <img src="pic/img-002.png" alt="img"/>
-                    </div>
-
-                    <div class="partners__slide swiper-slide">
-                        <img src="pic/img-003.png" alt="img"/>
-                    </div>
-
-                    <div class="partners__slide swiper-slide">
-                        <img src="pic/img-004.png" alt="img"/>
-                    </div>
-
-                    <div class="partners__slide swiper-slide">
-                        <img src="pic/img-005.png" alt="img"/>
-                    </div>
-
-                    <div class="partners__slide swiper-slide">
-                        <img src="pic/img-006.png" alt="img"/>
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div class="partners__swiper-next"></div>
-
-        </div>
-        <!-- /partners -->
-
-        <!-- media-gallery -->
-        <section class="media-gallery" data-loaded-group="0">
-
-            <h2 class="media-gallery__title">Portfolio</h2>
-
-            <!-- media-gallery__switcher -->
-            <div class="media-gallery__switcher">
-
-                <button class="media-gallery__check active" data-type="all">All</button>
-                <button class="media-gallery__check" data-type="on-white">On White</button>
-                <button class="media-gallery__check" data-type="apparel">Apparel</button>
-                <button class="media-gallery__check" data-type="jewelry">Jewelry</button>
-                <button class="media-gallery__check" data-type="custom-shots">Custom shots</button>
-                <button class="media-gallery__check" data-type="video">Video</button>
-
-            </div>
-            <!-- /media-gallery__switcher -->
-
-            <!-- media-gallery__cover -->
-            <div class="media-gallery__cover">
-
-                <!--media-gallery__inner-->
-                <div class="media-gallery__wrap">
-
-                    <div class="media-gallery__sizer"></div>
-
-                </div>
-                <!--/media-gallery__inner-->
-
-            </div>
-            <!-- /media-gallery__cover -->
-
-            <!--preloader-->
-            <div class="preloader">
-
-                <!--preloader__inner-->
-                <span class="preloader__inner">
-
-                    <!--preloader__item-->
-                    <span class="preloader__item"></span>
-                    <!--/preloader__item-->
-
-                </span>
-                <!--/preloader__inner-->
-
-            </div>
-            <!--/preloader-->
-
-            <!-- btn -->
-            <a href="php/gallery-content.php" class="media-gallery__more">View more >></a>
-            <!-- /btn -->
-
-        </section>
-        <!-- /media-gallery -->
 
         <!-- site__footer -->
         <footer class="site__footer">
