--- a/app/about.html
+++ b/app/about.html
@@ -9,7 +9,7 @@
 
     <title>Title</title>
 
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/aboutus-page.css">
     <link rel="stylesheet" href="css/swiper.min.css">
 
 </head>
@@ -22,9 +22,9 @@
         <div class="site__header">
 
             <!-- logo -->
-            <h1 class="logo">
+            <a href="#" class="logo">
                 <img src="img/logo.png" alt="img"/>
-            </h1>
+            </a>
             <!-- /logo -->
 
             <!-- mobile-menu -->
@@ -83,6 +83,81 @@
         </div>
         <!-- /site__header -->
 
+        <!-- sub-menu -->
+        <div class="sub-menu">
+            <a href="#" class="sub-menu__item active">We are</a>
+            <a href="#" class="sub-menu__item">Our team</a>
+            <a href="#" class="sub-menu__item">Clients</a>
+            <a href="#" class="sub-menu__item">Testimonials</a>
+            <a href="#" class="sub-menu__item">Blog</a>
+        </div>
+        <!-- /sub-menu -->
+
+        <!-- about-us -->
+        <article class="about-us">
+
+            <h1>About us</h1>
+
+            <!-- about-us__content -->
+            <div class="article about-us__content">
+
+                <p>Welcome to Pro Photo Studio.  We have been involved in commercial photography since 2008.  Our photography experience ranges from e-commerce, general white background, still life Photography , cosmetics, and apparel , to handbags, shoes, and other fashion accessories.</p>
+                <p>We are extremely confident that we offer the best value out there. Our end results speak for them self !</p>
+                <p>Working with small and large businesses, as well as individuals. We provide a fast product photography service with courier pickup and an online portal to ensure you can start viewing your photos as soon as they are ready. Our studio is located in Coral Springs, FL, however, we work nationwide and can service businesses throughout the United States and around the world.</p>
+
+            </div>
+            <!-- /about-us__content -->
+
+            <!-- about-us__img -->
+            <div class="about-us__img">
+                <img src="pic/img-007.jpg" alt="img"/>
+            </div>
+            <!-- /about-us__img -->
+
+        </article>
+        <!-- /about-us -->
+
+        <!-- catalog -->
+        <div class="catalog">
+
+            <div class="catalog__swiper-prev"></div>
+
+            <div class="catalog__swiper swiper-container">
+
+                <div class="swiper-wrapper">
+
+                    <div class="catalog__slide swiper-slide">
+                        <img src="pic/img-008.jpg" alt="img"/>
+                    </div>
+
+                    <div class="catalog__slide swiper-slide">
+                        <img src="pic/img-009.jpg" alt="img"/>
+                    </div>
+
+                    <div class="catalog__slide swiper-slide">
+                        <img src="pic/img-008.jpg" alt="img"/>
+                    </div>
+
+                    <div class="catalog__slide swiper-slide">
+                        <img src="pic/img-009.jpg" alt="img"/>
+                    </div>
+
+                    <div class="catalog__slide swiper-slide">
+                        <img src="pic/img-008.jpg" alt="img"/>
+                    </div>
+
+                    <div class="catalog__slide swiper-slide">
+                        <img src="pic/img-009.jpg" alt="img"/>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="catalog__swiper-next"></div>
+
+        </div>
+        <!-- /catalog -->
 
         <!-- site__footer -->
         <footer class="site__footer">
