--- a/app/jobs-v2.html
+++ b/app/jobs-v2.html
@@ -96,17 +96,15 @@
             <!-- hiring__item -->
             <div class="hiring__item">
 
-                <!-- hiring__item-content -->
-                <div class="hiring__item-content">
+                <h3>Product Photographer - Miami FL Location</h3>
 
-                    <h3>Product Photographer - Miami FL Location</h3>
+                <div class="hiring__item-hide">
 
-                    <!--<p>Product Photographer needed for our Miami location</p>-->
+                    <div class="hiring__item-content">Product Photographer needed for our Miami location</div>
+
+                    <a href="#" class="hiring__btn">Apply</a>
 
                 </div>
-                <!-- /hiring__item-content -->
-
-                <!--<a href="#" class="hiring__btn">Apply</a>-->
 
                 <!-- hiring__form -->
                 <form method="get" action="/" class="hiring__form">
@@ -120,7 +118,7 @@
                         <input type="file" name="" />
                     </label>
 
-                    <button>Apply</button>
+                    <button>SEND</button>
 
                 </form>
                 <!-- /hiring__form -->
